Bug 1149260 - Guard against trying to draw a drag image with zero length. r=enndeakin